close #38 CSRF対策を実施

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,4 +14,5 @@
     </div>
   </body>
   <%= javascript_include_tag 'application' %>
+  <%= hidden_field_tag "authenticity_token", form_authenticity_token %>
 </html>
